# SpinServe

./: README.md  example.py  pyproject.toml
spinserve/: auto_reload.py  routes.py  server.py
