[tool.poetry]
name = "spinserve"
version = "0.1.0"
description = ""
authors = ["Andrey Melchikov <andrei.melchikov25@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
watchdog = "^6.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
